syntax = "proto3";

package fusionServer;

service FusionServerService {
  rpc GenerateToken(GenerateTokenRequest) returns (GenerateTokenResponse);
}

message GenerateTokenRequest {

}

message GenerateTokenResponse {
  string accessToken = 1;
}